--- a/src/main/resources/languages/english.yml
+++ b/src/main/resources/languages/english.yml
@@ -1,100 +1,83 @@
-# String used as a divider
-line: "&7&m----------------------------------------";
+##############################
+#  SkinsRestorer Messages    #
+#       -= ENGLISH =-        #
+#  Generated on 13.7.2       #
+##############################
+#
+# We from SRTeam thank you for using our plugin!
+#
+# For more information about messages        -> https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Locale-and-Translations/
+# For Advanced help or other go to our Discord: https://discord.me/SkinsRestorer/
 
-# String sent to player when they do not have permission to use a command
-playerNoPermission: "&e[&2SkinsRestorer&e] &4Error&8: &cYou don't have permission to do this.";
+### HELP MESSAGES ###
+HELP_SKIN_CLEAR: Clears your skin.
+HELP_SKIN_CLEAR_OTHER: Clears the skin of another player.
+HELP_SKIN_UPDATE: Updates your skin.
+HELP_SKIN_UPDATE_OTHER: Updates the skin of another player.
+HELP_SKIN_SET: Sets your skin.
+HELP_SKIN_SET_OTHER: Sets the skin of another player.
+HELP_SR_RELOAD: Reloads the configuration file.
+HELP_SR_STATUS: Checks needed API services for this plugin to work.
+HELP_SR_DROP: Drops the players skin data.
+HELP_SR_PROPS: Displays the players actual skin as properties.
 
-# Message line sent when requesting SkinsRestorer help without skinsrestorer.cmds permission
-helpPlayer:
-    - "    &2&lSkinsRestorer &7- &f&lv%ver%"
-    - "    &2/skin set <skinname> &7-&f Changes your skin."
-    - "    &2/skin <skinname> &7-&f Shortened version of \"/skin set\"."
-    - "    &2/skin clear &7-&f Clears your skin.";
 
-# Message line sent when requesting SkinsRestorer help and having skinsrestorer.cmds permission
-help: "    &2/sr &7- &fDisplay admin commands.";
+### PERMISSIONS MESSAGES ###
+PLAYER_HAS_NO_PERMISSION: '&e[&2SkinsRestorer§e] &4Error&8: &cYou don''t have permission
+  to do this.'
+PLAYER_HAS_NO_PERMISSION_SKIN: '&e[&2SkinsRestorer&e] &4Error&8: &cYou don''t have
+  permission to set this skin.'
+SKIN_DISABLED: '&e[&2SkinsRestorer&e] &4Error&8: &cThis skin is disabled by an administrator.'
 
-# Message sent when the premium account with specified username does not exist
-notPremium: "&e[&2SkinsRestorer&e] &4Error&8: &cPremium player with that name does not exist.";
 
-# Message sent to player whose skin was changed
-skinChangeSuccess: "&e[&2SkinsRestorer&e] &2Your skin has been changed.";
+### SUCCES MESSAGES ###
+SKIN_CHANGE_SUCCESS: '&e[&2SkinsRestorer&e] &2Your skin has been changed.'
+SKIN_CLEAR_SUCCESS: '&e[&2SkinsRestorer&e] &2Your skin has been cleared.'
+SKIN_CLEAR_ISSUER: '&e[&2SkinsRestorer&e] &2Skin cleared for player %player.'
+SUCCESS_UPDATING_SKIN: '&e[&2SkinsRestorer&e] &2Your skin has been updated.'
+SUCCESS_UPDATING_SKIN_OTHER: '&e[&2SkinsRestorer&e] &2Skin updated for player %player.'
 
-# Message sent to player whose skin was cleared
-skinClearSuccess: "&e[&2SkinsRestorer&e] &2Your skin has been cleared.";
+ADMIN_SET_SKIN: '&e[&2SkinsRestorer&e] &2You set %player''s skin.'
+SKIN_DATA_DROPPED: '&e[&2SkinsRestorer&e] &2Skin data for player %player dropped.'
+RELOAD: '&e[&2SkinsRestorer&e] &2Config and Locale has been reloaded!'
 
-# Message sent to player that used /sr clear PLAYER command
-skinClearIssuer: "&e[&2SkinsRestorer&e] &2Skin cleared for player %player.";
 
-# Message sent when requesting admin help
-help_admin:
-    - "&2&lSkinsRestorer &7- &f&lv%ver% &c&lAdmin"
-    - "    &2/sr config &7- &fhelp page for usefull in game config settings"
-    - "    &2/sr set <player> <skin name> &7- &fChanges the skin of a player.."
-    - "    &2/sr drop <player> &7- &fDrops player skin data."
-    - "    &2/sr clear <player> &7- &fClears player data."
-    - "    &2/sr reload &7- &fReloads the config and locale"
-    - "    &2/sr props [player] &7- &fDisplays the players actual skin as properties";
+### ERROR MESSAGES ###
+SKIN_COOLDOWN_NEW: '&e[&2SkinsRestorer&e] &4Error&8: &cYou can change your skin again
+  in &e%s &cseconds.'
+NOT_PREMIUM: '&e[&2SkinsRestorer&e] &4Error&8: &cPremium player with that name does not exist.'
+ERROR_UPDATING_SKIN: '&e[&2SkinsRestorer&e] &4Error&8: &cAn error happened while updating
+  your skin. Please try again later!'
+GENERIC_ERROR: '&e[&2SkinsRestorer&e] &4Error&8: &cAn error occurred while requesting
+  skin data, please try again later!'
+WAIT_A_MINUTE: '&e[&2SkinsRestorer&e] &4Error&8: &cPlease wait a minute before requesting
+  that skin again. (Rate Limited)'  
+  
+INVALID_PLAYER: '&e[&2SkinsRestorer&e] &4Error&8: &c%player is not a valid username.'
+NO_SKIN_DATA: '&e[&2SkinsRestorer&e] &4Error&8: &cNo skin data acquired! Does this
+  player have a skin?'
 
-# Message displayed when using /sr set command
-adminSetSkin: "&e[&2SkinsRestorer&e] &2You set %player's skin.";
+### SKINS GUI ###
+MENU_OPEN: '&2Opening the skins menu...'
+NEXT_PAGE: '&a&l»&7 Next Page&a&l »'
+PREVIOUS_PAGE: '&e&l«&7 Previous Page&e&l «'
+REMOVE_SKIN: '&c&l»&7 Remove Skin&c&l «'
+SELECT_SKIN: '&2Click to select this skin'
 
-# Message displayed when using /sr set command and providing an invalid username
-invalidPlayer: "&e[&2SkinsRestorer&e] &4Error&8: &c%player is not a valid username.";
+### other ###
+OUTDATED: "&e[&2SkinsRestorer&e] &4You are running an outdated version of SkinsRestorer!\n\
+  &cPlease update to the latest version on Spigot: \n&ehttps://www.spigotmc.org/resources/skinsrestorer.2124/"
+STATUS_OK: '&e[&2SkinsRestorer&e] &2Mojang API connection successful!'
+ALT_API_FAILED: '&e[&2SkinsRestorer&e] &4Error&8: &cSkin Data API is overloaded, please
+  try again later!'
 
-# Message displayed when using /sr set command and providing username of a player that is currently not online
-playerNotonline: "&e[&2SkinsRestorer&e] &4Error&8: &cPlayer is not online!";
 
-# Message displayed when using /sr drop command
-skinDataDropped: "&e[&2SkinsRestorer&e] &2Skin data for player %player dropped.";
+### OLD MESSAGES ###
+# [!] If you set UseOldSkinHelp: true you are able to use the pre 13.6 help system.
 
-# Message sent when the /sr reload command execution was successful
-reload: "&e[&2SkinsRestorer&e] &2Config and Locale has been reloaded!";
-
-# Message sent to player that is on cooldown when using /skin command too fast without having the skinsrestorer.bypasscooldown permission
-skinCooldownNew: "&e[&2SkinsRestorer&e] &4Error&8: &cYou can change your skin again in &e%s &cseconds.";
-
-# Message sent when a player wants to use a disabled skin without having the skinsrestorer.bypassdisabled permission
-skinDisabled: "&e[&2SkinsRestorer&e] &4Error&8: &cThis skin is disabled by an administrator.";
-
-# Unknown
-noSkinData: "&e[&2SkinsRestorer&e] &4Error&8: &cNo skin data acquired! Does this player have a skin?";
-
-# When proxy returned skin is empty
-genericError: "&e[&2SkinsRestorer&e] &4Error&8: &cAn error occurred while requesting skin data, please try again later!";
-
-# Cooldown message
-waitMinute: "&e[&2SkinsRestorer&e] &4Error&8: &cPlease wait a minute before requesting that skin again. (Rate Limited)";
-
-# Message sent when server has an outdated version of SR
-outdated: "&e[&2SkinsRestorer&e] &4You are running an outdated version of SkinsRestorer!\n&cPlease update to the latest version: \n&e-> https://skinsrestorer.net/get/latest";
-
-# Message sent when using a player-only command
-playersOnly: "&4These commands are only for players!";
-
-# When none Player try's to set a skin
-notPlayer: "&e[&2SkinsRestorer&e] &4Error&8: &cYou need to be a player!";
-
-# === GUI ===
-# /skins message
-menuOpen: "&2Opening the skins menu...";
-
-# Next page [GUI]
-nextPage: "&a&l»&7 Next Page&a&l »";
-
-# Previus page [GUI]
-previusPage: "&e&l»&7 Previous Page&e&l «";
-
-# Clear skin [GUI]
-removeSkin: "&c&l»&7 Remove Skin&c&l »";
-
-# item lore for skulls [GUI]
-selectSkin: "&2Click to select this skin";
-
-# === DEBUG ===
-
-# old debug
-statusOk: "&e[&2SkinsRestorer&e] &2Mojang API connection successful!";
-
-# old debug
-altApiFailed: "&e[&2SkinsRestorer&e] &4Error&8: &cSkin Data API is overloaded, please try again later!";
+SR_LINE: '&7&m----------------------------------------'
+HELP_PLAYER: |2-
+    &2&lSkinsRestorer &7- &f&lv%ver%
+     &2/skin <skinname> &7-&f Changes your skin.
+      &2/skin update &7-&f Updates your skin.
+      &2/skin clear &7-&f Clears your skin.
