--- a/src/main/resources/languages/russian.yml
+++ b/src/main/resources/languages/russian.yml
@@ -1,105 +1,105 @@
 # Строка, которая используйтся в качестве разделителя между сообщениями.
-line: '&7&m----------------------------------------';
+line: '&7&m----------------------------------------'
 
 # Строка, которая будет отправлена игроку, у которого нет прав на исполнение команды.
-playerNoPermission: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cУ Вас нет прав на это действие.';
+playerNoPermission: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cУ Вас недостаточно прав.'
 
 # Будет показано игроку при вводе команды помощи от SkinsRestorer, если у него
 # нет права «skinsrestorer.cmds». %ver% - версия плагина.
 helpPlayer:
     - '    &2&lSkinsRestorer &7- &f&lv%ver%'
-    - '    &2/skin set «ник скина» &7-&f Сменить скин.'
-    - '    &2/skin «ник скина» &7-&f Короткая версия "/skin set".'
-    - '    &2/skin clear &7-&f Очистит (удалит текущий) скин.';
+    - '    &2/skin set «ник &7- &fСменить скин.'
+    - '    &2/skin «ник &7- &fКороткая версия '/skin set'.'
+    - '    &2/skin clear &7- &fУдалит Ваш скин'
 
 # Будет показано игроку при вооде команды помощи от SkinsRestirer, если у него
 # есть право «skinsrestorer.cmds».
-help: '    &2/sr &7- &fПоказать команды для администрации.';
+help: '    &2/sr &7- &fКоманды администрации.'
 
-# Будет показано игроку, если указаный премиум аккаунт не существует.
-notPremium: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cПремиум игрок с таким именем не существует.';
+# Будет показано игроку, если указаный такого скина не существует.
+notPremium: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cСкин не найден.'
 
-# Будет показано игроку, когда он сменил свой скин.
-skinChangeSuccess: '&e[&2SkinsRestorer&e] &2Ваш скин был изменён.';
+# Будет показано игроку, когда он сменит свой скин.
+skinChangeSuccess: '&e[&2SkinsRestorer&e] &2Ваш скин успешно установлен.'
 
-# Будет показано игроку, когда он очистил (удалил текущий) скин.
-skinClearSuccess: '&e[&2SkinsRestorer&e] &2Ваш скин был сброшен.';
+# Будет показано игроку, когда он сбросит скин.
+skinClearSuccess: '&e[&2SkinsRestorer&e] &2Ваш скин успешно удален.'
 
 # Будет показано игроку, когда он введет «/sr clear <PLAYER>» команду.
 # %player - ник введённого игрока.
-skinClearIssuer: '&e[&2SkinsRestorer&e] &2Скин игрока %player был сброшен.';
+skinClearIssuer: '&e[&2SkinsRestorer&e] &2Вы удалили скин игрока %player.'
 
 # Отправляется в качестве команды помощи администрации.
 help_admin:
-    - '&2&lSkinsRestorer &7- &f&lv%ver% &c&lАдмин'
-    - '    &2/sr config &7- &fстраница помощи для настройки конфигураии в игре.'
-    - '    &2/sr set «игрок» «ник скина» &7- &fСменить скин игрока.'
-    - '    &2/sr drop «игрок» &7- &fСбросить скин игрока.'
-    - '    &2/sr clear «игрок» &7- &fОчистить скин игрока.'
-    - '    &2/sr reload &7- &fПерезагрузить конфигурацию и локаль (сообщения).'
-    - '    &2/sr props [player] &7- &fПоказать текущие настройки скина игрока.';
+    - '&2&lSkinsRestorer &7- &f&lv%ver% &c&lКоманды для администрации'
+    - '    &2/sr config &7- &fсправочная страница, полезная в конфигурации плагина.'
+    - '    &2/sr set «игрок» «ник скина» &7- &fИзменить скин игрока.'
+    - '    &2/sr drop «player» &7- &fСбросить данные о скине игрока.'
+    - '    &2/sr clear «player» &7- &fСбросить текущий скин игрока.'
+    - '    &2/sr reload &7- &fПерезагрузить конфигурацию и локализацию'
+    - '    &2/sr props [player] &7- &fПоказать текущий скин игрока как свойство.'
 
 # Будет показано после использования команды «/sr set».
-adminSetSkin: '&e[&2SkinsRestorer&e] &2Вы установили скин для %player.';
+adminSetSkin: '&e[&2SkinsRestorer&e] &2Вы установили скин для %player.'
 
 # Будет показано после использования команды «/sr set», если передан некорректный ник.
-invalidPlayer: '&e[&2SkinsRestorer&e] &4Ошибка&8: &c"%player" - некорректный ник.';
+invalidPlayer: '&e[&2SkinsRestorer&e] &4Ошибка&8: Игрок с ником %player не найден.'
 
 # Будет показано если игрок, переданный в команду «/sr set», не в сети (оффлайн).
-playerNotonline: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cИгрок не в сети!';
+playerNotonline: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cИгрок не в сети!'
 
 # Будет показано после использования команды «/sr drop».
-skinDataDropped: '&e[&2SkinsRestorer&e] &2Вы сбросили скин игрока %player.';
+skinDataDropped: '&e[&2SkinsRestorer&e] &2Вы сбросили скин игрока %player.'
 
 # Будет показано, если команда «/sr reload» успешно перезагрузила конфиги и локаль.
-reload: '&e[&2SkinsRestorer&e] &2Конфигурация и локаль успешно перезагружены!';
+reload: '&e[&2SkinsRestorer&e] &2Конфигурация и лизация успешно перезагружены!'
 
 # Будет показано, если перед использованием команды «/skin» ещё не прошло
 # достаточно времени, и у игрока нет права «skinsrestorer.bypasscooldown».
-skinCooldownNew: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cВы сможете сменить скин через &e%s &cсек.';
+skinCooldownNew: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cВы сможете сменить скин через &e%s &cсек.'
 
 # Отправляется игроку, когда он хочет поставить запрещённый скин.
 # Для обхода ограничения можно использовать право «skinsrestorer.bypassdisabled»
-skinDisabled: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cЭтот скин запрещён администрацией.';
+skinDisabled: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cЭтот скин запрещён администрацией.'
 
 # Отправляется игроку, когда скин для введённого ника не найден.
-noSkinData: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cСкин не найден! Проверьте, действительно ли есть такой ник со скином?';
+noSkinData: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cСкин не найден! У этого игрока есть скин?'
 
 # Отправляется игроку, когда прокси сервер вернул пустой скин. (вероятно, ошибка сети)
-genericError: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cпроизошла ошибка при загрузке скина. Пожалуйста, попробуйте снова чуть позже!';
+genericError: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cПроизошла ошибка при загрузке скина. Пожалуйста, попробуйте снова чуть позже!'
 
 # Сообщение об откате/перезарядке команды перед повторным использованием.
-waitMinute: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cПожалуйста, подождите немного перед повторным запросом этого скина. (Скорость ограничена)';
+waitMinute: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cПожалуйста, подождите немного перед повторным запросом этого скина.'
 
 # Сообщает о старой версии плагина.
-outdated: '&e[&2SkinsRestorer&e] &4Вы запускаете старую версию SkinsRestorer!\n&cПожалуйста, обновитесь на новую версию: \n&e-> https://skinsrestorer.net/get/latest';
+outdated: '&e[&2SkinsRestorer&e] &4Вы используете устаревшую версию SkinsRestorer!\n&cПожалуйста, обновитесь о последней: \n&e-> https://skinsrestorer.net/get/latest'
 
 # Покажется консоли, если введена команда только для игроков.
-playersOnly: '&4Эту команду может использовать только игрок!';
+playersOnly: '&4Эту команду может использовать только игрок!'
 
 # Когда НЕ игрок пытается установить себе скин (как правило, консоль).
-notPlayer: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cВам необходимо быть игроком!';
+notPlayer: '&e[&2SkinsRestorer&e] &4Ошибка&8: &cВы должны быть игроком!'
 
 # === Графический интерфейс / GUI ===
 # Сообщение /skins
-menuOpen: '&2Открывается меню скинов...';
+menuOpen: '&2Открытие меню скинов...'
 
 # Следующая страница графического интерфейса / GUI
-nextPage: '&a&l»&7 Следующая Страница&a&l »';
+nextPage: '&a&l»&7 Следующая Страница&a&l »'
 
 # Предыдущая страница графического интерфейса / GUI
-previusPage: '&e&l»&7 Предыдущая страница&e&l «';
+previusPage: '&e&l»&7 Предыдущая страница&e&l «'
 
 # Очистить (убрать) скин [GUI]
-removeSkin: '&c&l»&7 Убрать скин&c&l »';
+removeSkin: '&c&l»&7 Удалить скин&c&l »'
 
 # Лор голов (Описание черепов)
-selectSkin: '&2Нажмите, чтобы выбрать этот скин';
+selectSkin: '&2Нажмите, чтобы выбрать этот скин'
 
 # === ДЕБАГ / DEBUG ===
 
 # старая версия дебага
-statusOk: '&e[&2SkinsRestorer&e] &2Подключились к API Mojang!';
+statusOk: '&e[&2SkinsRestorer&e] &2Соединение с API Mojang установлено!'
 
 # старая версия дебага
-altApiFailed: '&e[&2SkinsRestorer&e] &4Ошибка&8: API скинов перегружен. Пожалуйста, попробуйте позже!';
+altApiFailed: '&e[&2SkinsRestorer&e] &4Ошибка&8: API скинов недоступно. Пожалуйста, попробуйте позже!'
