import new locale V2

--- a/src/main/resources/languages/english.yml
+++ b/src/main/resources/languages/english.yml
@@ -4,16 +4,25 @@
 prefix: "&e[&2SkinsRestorer&e]"
 
 # === Help messages ===
-#HELP_SKIN_CLEAR
-HELP_SKIN_CLEAR: "Clears your skin."
-HELP_SKIN_CLEAR_OTHER: "Clears the skin of another player."
-HELP_SKIN_UPDATE: "Updates your skin."
-HELP_SKIN_UPDATE_OTHER: "Updates the skin of another player."
+# info for /skin <skin>
 HELP_SKIN_SET: "Changes your skin."
+# info for /skin set <skin> <player>
 HELP_SKIN_SET_OTHER: "Changes the skin of another player."
+# info for /skin clear
+HELP_SKIN_CLEAR: "Clears your skin."
+# info for /skin clear <player>
+HELP_SKIN_CLEAR_OTHER: "Clears the skin of another player."
+# info for /skin update
+HELP_SKIN_UPDATE: "Updates your skin."
+# info for /skin update <player> 
+HELP_SKIN_UPDATE_OTHER: "Updates the skin of another player."
+# info for /sr reload
 HELP_SR_RELOAD: "Reloads the configuration file."
+# info for /sr status
 HELP_SR_STATUS: "Checks plugin needed API services"
+# info for /sr drop
 HELP_SR_DROP: "Drops the players skin data."
+# info for /sr props
 HELP_SR_PROPS: "Displays the players current skin as properties."
 
 # Message sent when the premium account with specified username does not exist
@@ -22,9 +31,9 @@ notPremium: "&4Error&8: &cPremium player with that name does not exist."
 # String sent to player when they do not have permission to use a command
 playerNoPermission: "&4Error&8: &cYou don't have permission to perform this command."
 
-playerNoPermissionskin: "&e[&2SkinsRestorer&e] &4Error&8: &cYou don't have permission to set this skin."
+playerNoPermissionskin: "&4Error&8: &cYou don't have permission to set this skin."
 
-playerNoPermissionurl: '&e[&2SkinsRestorer&e] &4Error&8: &cYou don't have permission to set skins by URL.'
+playerNoPermissionurl: '&4Error&8: &cYou don't have permission to set skins by URL.'
 
 # Message sent to player whose skin was changed
 skinChangeSuccess: "&2Your skin has been changed."
@@ -39,13 +48,13 @@ skinClearIssuer: "&2Skin cleared for player %player."
 adminSetSkin: "&2You set %player's skin."
 
 #uploading & processing custom skin to our services, waiting for returning the skin we can set
-MSUpdatingSkin: "&e[&2SkinsRestorer&e] &Processing skin, please wait..."
+MSUpdatingSkin: "&Processing skin, please wait..."
 
 # /skin update succes
-SUCCESS_UPDATING_SKIN: "&2Your skin has been updated."
+SuccesUpdatingSkin: "&2Your skin has been updated."
 
 # /skin update <player>, issuer / sender success message
-SUCCESS_UPDATING_SKIN_OTHER: "&2Skin updated for player %player."
+SuccesUpdatingSkinOther: "&2Skin updated for player %player."
 
 # Message displayed when using /skin set <skin> <player> command and providing an invalid username
 invalidPlayer: "&4Error&8: &c%player is not a valid username."
@@ -71,11 +80,15 @@ noSkinData: "&4Error&8: &cNo skin data acquired! Does this player have a skin?"
 # Cooldown message
 waitMinute: "&4Error&8: &cPlease wait a minute before requesting that skin again. (Rate Limited)"
 
+ErrorMSFULL: "&4MS Error&8: &cAPI timed out while uploading your skin. Please try again later. (MineSkin)"
+  
+ErrorMSGENERIC: "&4MS Error&8: &c%error%"
+
 # OLD: When proxy returned skin is empty
 genericError: "&4Error&8: &cAn error occurred while requesting skin data, please try again later!"
 
-ERROR_UPDATING_SKIN: "&e[&2SkinsRestorer&e] &4Error&8: &cAn error occurred while updating
-  your skin. Please try again later!"
+# Error that occurs when trying to updating the skin 
+ErrorUpdatingSkin: "&4Error&8: &cAn error occurred while updating skin.\n &4Note&8: &cyou can &nnot update custom / URL skins&c!
 
 # Message sent when server has an outdated version of SR
 outdated: "&4You are running an outdated version of SkinsRestorer!\n&cPlease update to the latest version: \n&e-> https://skinsrestorer.net/get/latest"
