--- a/src/main/resources/languages/english.yml
+++ b/src/main/resources/languages/english.yml
@@ -9,6 +9,9 @@ notPremium: "&4Error&8: &cPremium player with that name does not exist."
 # String sent to player when they do not have permission to use a command
 playerNoPermission: "&4Error&8: &cYou don't have permission to do this."
 
+# Skinsrestorer cant update custom skins! Players should request skin again using /skin url
+ERRORUpdatingURL = "&4Error&8: &cYou can't update custom url skins! \n&cRequest again using /skin url."
+
 # Message sent to player whose skin was changed
 skinChangeSuccess: "&2Your skin has been changed."
 
