--- a/src/main/resources/languages/english.yml
+++ b/src/main/resources/languages/english.yml
@@ -12,6 +12,9 @@ playerNoPermission: "&4Error&8: &cYou don't have permission to do this."
 # Skinsrestorer cant update custom skins! Players should request skin again using /skin url
 ERRORUpdatingURL = "&4Error&8: &cYou can't update custom url skins! \n&cRequest again using /skin url."
 
+# Error when try try to to do /skin ulr with a INVALID url. they should use imgur or see the guide using the link.
+ERRORInvalidURLSKIN = "&4Error&8: &cInvalid skin url or format, \n&c try uploading your skin to imgur and right click copy imgurl \n&cFor guide see: \n&c&n&o https://github.com/SkinsRestorer/SkinsRestorerX/wiki/SkinURL."
+
 # Message sent to player whose skin was changed
 skinChangeSuccess: "&2Your skin has been changed."
 
