--- a/src/main/resources/languages/english.yml
+++ b/src/main/resources/languages/english.yml
@@ -1,4 +1,4 @@
-# Generated on 13.7.9 #
+# Generated on ${project.version} #
 
 # Prefix that is send before each nonhelp message
 prefix: "&e[&2SkinsRestorer&e]"
@@ -10,10 +10,10 @@ notPremium: "&4Error&8: &cPremium player with that name does not exist."
 playerNoPermission: "&4Error&8: &cYou don't have permission to do this."
 
 # Skinsrestorer cant update custom skins! Players should request skin again using /skin url
-ERRORUpdatingURL = "&4Error&8: &cYou can't update custom url skins! \n&cRequest again using /skin url."
+ERRORUpdatingURL: "&4Error&8: &cYou can't update custom url skins! \n&cRequest again using /skin url."
 
 # Error when try try to to do /skin ulr with a INVALID url. they should use imgur or see the guide using the link.
-ERRORInvalidURLSKIN = "&4Error&8: &cInvalid skin url or format, \n&c try uploading your skin to imgur and right click copy imgurl \n&cFor guide see: \n&c&n&o https://github.com/SkinsRestorer/SkinsRestorerX/wiki/SkinURL."
+ERRORInvalidURLSKIN: "&4Error&8: &cInvalid skin url or format, \n&c try uploading your skin to imgur and right click copy imgurl \n&cFor guide see: \n&c&n&o https://github.com/SkinsRestorer/SkinsRestorerX/wiki/SkinURL."
 
 # Message sent to player whose skin was changed
 skinChangeSuccess: "&2Your skin has been changed."
