--- a/src/main/resources/languages/english.yml
+++ b/src/main/resources/languages/english.yml
@@ -1,6 +1,6 @@
 # Generated on ${version} #
 
-# Prefix that is send before each nonhelp message
+# Prefix that is sent before each non help message
 prefix: "&e[&2SkinsRestorer&e]"
 
 # Message sent when the premium account with specified username does not exist
@@ -9,10 +9,10 @@ notPremium: "&4Error&8: &cPremium player with that name does not exist."
 # String sent to player when they do not have permission to use a command
 playerNoPermission: "&4Error&8: &cYou don't have permission to do this."
 
-# Skinsrestorer cant update custom skins! Players should request skin again using /skin url
+# Skinsrestorer can't update custom skins! Players should request skin again using /skin url
 ERRORUpdatingURL: "&4Error&8: &cYou can't update custom url skins! \n&cRequest again using /skin url."
 
-# Error when try try to to do /skin ulr with a INVALID url. they should use imgur or see the guide using the link.
+# Error when trying to do /skin ulr with a INVALID url. they should use imgur or see the guide using the link.
 ERRORInvalidURLSKIN: "&4Error&8: &cInvalid skin url or format, \n&c try uploading your skin to imgur and right click copy imgurl \n&cFor guide see: \n&c&n&o https://github.com/SkinsRestorer/SkinsRestorerX/wiki/SkinURL."
 
 # Message sent to player whose skin was changed
