--- a/shared/src/main/resources/languages/english.yml
+++ b/shared/src/main/resources/languages/english.yml
@@ -1,111 +1,148 @@
-# Generated on ${version} #
+##############################
+#  SkinsRestorer help msg    #
+#  Generated on ${version}         #
+##############################
+#
+# We from SRTeam thank you for using our plugin!
+#
+# For more information about messages        -> https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Locale-and-Translations/
+# For Advanced help or other go to our Discord: https://discord.me/SkinsRestorer/
 
-# Prefix that is sent before each non help message
+# Prefix that is sent before each non 'help-', 'syntax-' or 'completions-' message
 prefix: "&e[&2SkinsRestorer&e]"
 
-# Message sent when the premium account with specified username does not exist
-notPremium: "&4Error&8: &cPremium player with that name does not exist."
+# Help lines appearing in "/skin" OR "/skin help"
+help-SkinClear: "Clears your skin."
+help-SkinClear-Other: "Clears the skin of another player."
+help-SkinUpdate: "Updates your skin."
+help-SkinUpdate-Other: "Updates the skin of another player."
+help-SkinSet: "Set the skin of another player."
+help-Skinset-Other: "Sets the skin of another player."
+help-SkinSet-Other-Url: "Set a skin by Image_url.png"
+help-SRreload: "Reloads the configuration file."
+help-SRStatus: "Checks plugin needed API services."
+help-SRDrop: "Removes players or skin data."
+help-SRProps: "Displays the players current skin properties."
+help-SRApply-Skin: "Re-apply the skin for target user."
+help-SRCreateCustom: "Create a custom server wide skin"
 
-# String sent to player when they do not have permission to use a command
-playerNoPermission: "&4Error&8: &cYou don't have permission to do this."
+syntax-Defaultcommand: " <skin/url>"
+syntax-SkinSet: " <skin>"
+syntax-SkinSet-Other: " <target> <skin/url>"
+syntax-SkinUrl: " <SkinUrl> [steve/slim]"
+syntax-SkinUpdate-Other: " <target>"
+syntax-SkinClear-Other: " <target>"
 
-# Skinsrestorer can't update custom skins! Players should request skin again using /skin url
-ERRORUpdatingURL: "&4Error&8: &cYou can't update custom url skins! \n&cRequest again using /skin url."
+completions-Skin: ""
+completions-Skinname: ""
+completions-SkinUrl: ""
 
-# Error when trying to do /skin ulr with a INVALID url. they should use imgur or see the guide using the link.
-ERRORInvalidURLSKIN: "&4Error&8: &cInvalid skin url or format, \n&c try uploading your skin to imgur and right click copy imgurl \n&cFor guide see: \n&c&n&o https://github.com/SkinsRestorer/SkinsRestorerX/wiki/SkinURL."
+####################
+# Success messages #
+####################
 
-# Message sent to player whose skin was changed
+# Success message sent to player whose skin was changed
 skinChangeSuccess: "&2Your skin has been changed."
 
-# Message sent to player whose skin was cleared
-skinClearSuccess: "&2Your skin has been cleared."
-
-# Message sent to player that used /sr clear PLAYER command
-skinClearIssuer: "&2Skin cleared for player %player."
-
-# Message displayed when using /sr set command
+# Success message displayed when using /sr set command
 adminSetSkin: "&2You set %player's skin."
 
-# Message displayed when using /sr set command and providing an invalid username
-invalidPlayer: "&4Error&8: &c%player is not a valid username."
+# Success message to player whose skin was cleared
+skinClearSuccess: "&2Your skin has been cleared."
 
-# Message displayed when using /sr set command and providing username of a player that is currently not online
-playerNotonline: "&4Error&8: &cPlayer is not online!"
+# Success message sent to player that used /sr clear PLAYER command
+skinClearIssuer: "&2Skin cleared for player %player."
 
-# Message displayed when using /sr drop command
-skinDataDropped: "&2Skin data for player %player dropped."
+# Success message to player whose skin was updated
+skinUpdateSuccess: "&2Your skin has been updated."
 
-# Message sent when the /sr reload command execution was successful
-reload: "&2Config and Locale has been reloaded!"
+# Success message sent to player that used /sr update PLAYER command
+skinUpdateIssuer: "&2Skin updated for player %player."
 
-# Message sent to player that is on cooldown when using /skin command too fast without having the skinsrestorer.bypasscooldown permission
-skinCooldownNew: "&4Error&8: &cYou can change your skin again in &e%s &cseconds."
+# Success message when using /sr drop command
+DataDropped: "&2Data dropped for %playerOrSkin %targets."
+
+# Success message when using /sr CreateCustom command
+skinCreateSuccess: "&2Skin %skin has been created!"
+
+##################
+#                #
+##################
+# Informing the player when we did queue a custom skin.
+urlSkin-waitMinute: "&2Uploading skin, please wait...(This may take up some time)"
+
+                      WAIT_A_MINUTE
+
+########################
+# Permissions messages #
+########################
+
+noPermission-Skin: ""
+noPermission-Url: ""
 
 # Message sent when a player wants to use a disabled skin without having the skinsrestorer.bypassdisabled permission
 skinDisabled: "&4Error&8: &cThis skin is disabled by an administrator."
 
-# Can not set skin due to player name not being premium or having no skin
-noSkinData: "&4Error&8: &cNo skin data acquired! Does this player have a skin?"
+#
+urlSkin-DomainBlocked: "&4Error&8: &cThis domain has not been allowed by the administrator."
 
-# Cooldown message
-waitMinute: "&4Error&8: &cPlease wait a minute before requesting that skin again. (Rate Limited)"
+# Message sent to player that is on cooldown when using /skin command too fast without having the skinsrestorer.bypasscooldown permission
+skinCooldown: "&4Error&8: &cYou can change your skin again in &e%s &cseconds."
 
-# When proxy returned skin is empty
-genericError: "&4Error&8: &cAn error occurred while requesting skin data, please try again later!"
+  ##################
+  # Error messages #
+  ##################
 
-# Message sent when server has an outdated version of SR
-outdated: "&4You are running an outdated version of SkinsRestorer!\n&cPlease update to the latest version: \n&e-> https://skinsrestorer.net/get/latest"
+                INVALID_PLAYER
+                NOT_PREMIUM
+                ERROR_NO_SKIN
+                NO_SKIN_DATA
+                RELOAD
+                OUTDATED
 
-# Message sent when using a player-only command
-playersOnly: "&4These commands are only for players!"
+                error-Updating-Skin
+                error-Updating-Url
+                error-Updating-CustomSkin
+                error-InvalidSkinUrl
+                error-SkinUrl-Timeout
+                error-Generic-error
 
-# When none Player try's to set a skin
-notPlayer: "&4Error&8: &cYou need to be a player!"
+skinsMenu-Open: "&2Opening the skins menu..."
+skinsMenu-Title: "&9Skins Menu - Page %page"
+skinsMenu-NexstPage: "&a&l»&7 Next Page&a&l »"
+skinsMenu-PreviousPage: "&e&l«&7 Previous Page&e&l «"
+skinsMenu-Select-Skin: "&c&l[ &7Remove Skin&c&l ]"
+skinsMenu-Remove-Skin: "&2Click to select this skin"
 
-# === GUI ===
-# /skins message
-menuOpen: "&2Opening the skins menu..."
+  #######
+  # API #
+  #######
+                         STATUS_OK
 
-# Previus page [GUI]
-previusPage: "&e&l«&7 Previous Page&e&l «"
+ERROR-MOJANG-API-OFFLINE: "&4Error&8: &cMojang API is currently offline, sadly we were not able to find your archived skin. \n&cPlease try again later...";
+ERROR-MS-API-OFFLINE: "&4Error&8: &cMineSkin APII is currently offline, sadly we can't create custom skin's at this moment. \n&cPlease try again later...";
+ERROR-SERVER-OFFLINE: "&4Error&8: &cServer is having connection issues, please try again later...";
+ALT-API-FAILED: "&4Error&8: &cSkin Data API is overloaded, please try again later!";
+MS-API-FAILED: "&4Error&8: &cMineSkin API is overloaded, please try again later!";
 
-# Next page [GUI]
-nextPage: "&a&l»&7 Next Page&a&l »"
+###############
+# CUSTOM HELP #
+###############
+# WARNING WARNING WARNING
+# Make sure to enable in config!
 
-# Clear skin [GUI]
-removeSkin: "&c&l»&7 Remove Skin&c&l »"
-
-# item lore for skulls [GUI]
-selectSkin: "&2Click to select this skin"
-
-# === DEBUG ===
-# old debug
-statusOk: "&2Mojang API connection successful!"
-
-# old debug
-altApiFailed: "&4Error&8: &cSkin Data API is overloaded, please try again later!"
-
-# === OLD SKIN HELP ===
 # String used as a divider
-line: "&7&m----------------------------------------"
+customHelpIFenabled-line: "&7&m----------------------------------------"
 
 # Message line sent when requesting SkinsRestorer help without skinsrestorer.cmds permission
-helpPlayer:
+# WIP -> missing commands & should match current acf color
+customHelpIFenabled:
   - "    &2&lSkinsRestorer &7- &f&lv%ver%"
   - "    &2/skin set <skinname> &7-&f Changes your skin."
   - "    &2/skin <skinname> &7-&f Shortened version of \"/skin set\"."
   - "    &2/skin clear &7-&f Clears your skin."
+  - "    &2/skin update &7-&f Updates your skin."
 
-# Message line sent when requesting SkinsRestorer help and having skinsrestorer.cmds permission
-help: "    &2/sr &7- &fDisplay admin commands."
-
-# Message sent when requesting admin help
-help_admin:
-  - "&2&lSkinsRestorer &7- &f&lv%ver% &c&lAdmin"
-  - "    &2/sr config &7- &fhelp page for usefull in game config settings"
-  - "    &2/sr set <player> <skin name> &7- &fChanges the skin of a player.."
-  - "    &2/sr drop <player> &7- &fDrops player skin data."
-  - "    &2/sr clear <player> &7- &fClears player data."
-  - "    &2/sr reload &7- &fReloads the config and locale"
-  - "    &2/sr props [player] &7- &fDisplays the players actual skin as properties"
+#
+#
+version: ${version}
